--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,28 +1,28 @@
 .container {
-    // Mobile screen first
-    width: 100%;
-    padding-left: 15px;
-    padding-right: 15px;
-    margin-left: auto;
-    margin-right: auto;
-    // outline: 1 solid tomato;
-    // outline-offset: 1 solid tomato;
+  // Mobile screen first
+  width: 100%;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  border: 1px solid tomato;
+  //   outline-offset: 1 solid tomato;
 
-    // breakpoint 480px for mobile screen
+  // breakpoint 480px for mobile screen
 
-    @media screen and (min-width: 480px) {
-        max-width: 480px;
-    }
+  @media screen and (min-width: 480px) {
+    max-width: 480px;
+  }
 
-    // breakpoint 768px for tablet screen
+  // breakpoint 768px for tablet screen
 
-    @media screen and (min-width: 768px) {
-        max-width: 768px;
-    }
+  @media screen and (min-width: 768px) {
+    max-width: 768px;
+  }
 
-    // breakpoint 1200px for tablet screen
+  // breakpoint 1200px for tablet screen
 
-    @media screen and (min-width: 1200px) {
-        max-width: 1200px;
-    }
+  @media screen and (min-width: 1630px) {
+    max-width: 1630px;
+  }
 }
