--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -1,13 +1,14 @@
 .logo-head {
-    font-family: var(--second-font);
-    font-weight: 700;
-    font-size: 26px;
-    line-height: 1.2;
-    letter-spacing: 0.03em;
-    color: var(--title-text-color);
-    margin-right: 93px;
+  font-family: var(--second-font);
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.2;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+  margin-right: 93px;
+  //   margin-left: 215px;
 }
 
 .accent1 {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
