--- a/sass/layout/_section-team.scss
+++ b/sass/layout/_section-team.scss
@@ -2,149 +2,147 @@
 //     display: block;
 
 .team-members {
-    @media screen and (min-width: 768px) {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-    }
+  @media screen and (min-width: 768px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+  }
 
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-    }
+  @media screen and (min-width: 1200px) {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    padding: 0 180px;
+  }
 }
 
 .team-list__item {
-    flex-direction: column;
-    align-items: center;
-    background: var(--white-color);
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-    border-radius: 0px 0px 4px 4px;
-    // margin-right: var(--typical-gap);
-    // &:nth-child(4n) {
-    //     margin-right: 0;
-    // }
+  flex-direction: column;
+  align-items: center;
+  background: var(--white-color);
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  border-radius: 0px 0px 4px 4px;
+  // margin-right: var(--typical-gap);
+  // &:nth-child(4n) {
+  //     margin-right: 0;
+  // }
 
-    @media screen and (min-width: 768px) {
-        width: calc((100% - 30px) / 2);
-    }
-    @media screen and (min-width: 1200px) {
-        width: calc((100% - 90px) / 4);
-    }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 30px) / 2);
+  }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 90px) / 4);
+  }
 }
 
 @media screen and (max-width: 767px) {
-    .team-list__item:not(:last-child) {
-        margin-bottom: 30px;
-    }
+  .team-list__item:not(:last-child) {
+    margin-bottom: 30px;
+  }
 }
 
 .our-team {
-    width: 100%;
-    height: 33px;
-    font-weight: 700;
-    font-size: 28px;
-    line-height: 1.17;
-    letter-spacing: 0.03em;
-    margin-bottom: 30px;
-    text-align: center;
-    color: var(--accent-color);
+  width: 100%;
+  height: 33px;
+  font-weight: 700;
+  font-size: 28px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  margin-bottom: 30px;
+  text-align: center;
+  color: var(--accent-color);
 
-    @media screen and (min-width: 1200px) {
-        // width: 264px;
-        // height: 42px;
-        font-size: 36px;
-        line-height: 1.16;
-        margin-bottom: 50px;
-    }
-
-
+  @media screen and (min-width: 1200px) {
+    // width: 264px;
+    // height: 42px;
+    font-size: 36px;
+    line-height: 1.16;
+    margin-bottom: 50px;
+  }
 }
 
 .card-name__pre-text {
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    text-align: center;
-    margin-top: 0;
-    margin-bottom: 10px;
-    color: var(--accent-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin-top: 0;
+  margin-bottom: 10px;
+  color: var(--accent-color);
 }
 
 .main-title {
-    color: var(--accent-color);
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
+  color: var(--accent-color);
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 2;
+  letter-spacing: 0.06em;
 }
 
 .main-work {
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.03em;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.03em;
 }
 
 .card-name__post-text {
-    font-size: 16px;
-    line-height: 1.18;
-    letter-spacing: 0.03em;
-    text-align: center;
-    margin: 0px;
-    margin-bottom: 16px;
+  font-size: 16px;
+  line-height: 1.18;
+  letter-spacing: 0.03em;
+  text-align: center;
+  margin: 0px;
+  margin-bottom: 16px;
 }
 
 .section-our-team {
-    padding-top: 60px;
-    padding-bottom: 60px;
-    background-color: var(--fill-color);
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color: var(--fill-color);
 
-    @media screen and (min-width: 1200px) {
-        padding-top: var(--next-typical-gap);
-        padding-bottom: var(--next-typical-gap);
-
-    }
+  @media screen and (min-width: 1200px) {
+    padding-top: var(--next-typical-gap);
+    padding-bottom: var(--next-typical-gap);
+  }
 }
 
 .card-name {
-    // width: 100%;
-    padding-top: var(--typical-gap);
-    padding-bottom: var(--typical-gap);
+  // width: 100%;
+  padding-top: var(--typical-gap);
+  padding-bottom: var(--typical-gap);
 }
 
 .soc {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 
 .soc__item {
-    margin-left: 10px;
-    &:first-child {
-        margin-left: 0;
-    }
+  margin-left: 10px;
+  &:first-child {
+    margin-left: 0;
+  }
 }
 
 .soc-link {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 44px;
-    height: 44px;
-    border-radius: 50%;
-    background-color: var(--white-color);
-    color: var(--svg-color);
-    &:hover,
-    &:focus {
-        background-color: var(--title-text-color);
-        color: var(--white-color);
-    }
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  background-color: var(--white-color);
+  color: var(--svg-color);
+  &:hover,
+  &:focus {
+    background-color: var(--title-text-color);
+    color: var(--white-color);
+  }
 }
 
 .soc__icon {
-    fill: currentColor;
+  fill: currentColor;
 }
-
