--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,13 +1,13 @@
 body {
-    font-family: var(--main-font);
-    letter-spacing: 0.03em;
-    background-color: var(--white-color);
-    color: var(--primery-text-color);
-    letter-spacing: 0.03em;
+  font-family: var(--main-font);
+  letter-spacing: 0.03em;
+  background-color: var(--white-color);
+  color: var(--primery-text-color);
+  letter-spacing: 0.03em;
 }
 
 body.modal-open {
-    overflow: hidden;
+  overflow: hidden;
 }
 
 p,
@@ -17,22 +17,28 @@ h3,
 h4,
 h5,
 h6 {
-    margin: 0;
+  margin: 0;
 }
 
 ul,
 li {
-    margin: 0;
-    padding-left: 0;
-    display: list-item;
+  margin: 0;
+  padding-left: 0;
+  display: list-item;
 }
 
 ul {
-    list-style: none;
+  list-style: none;
 }
 
 .link {
-    text-decoration: none;
+  text-decoration: none;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
 }
 
 // @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap");
