--- a/sass/layout/_email-tel.scss
+++ b/sass/layout/_email-tel.scss
@@ -1,13 +1,10 @@
 .contact-list {
-    display: flex;
-    // width: 100%;
-    margin-left: auto;
-    // flex-wrap: wrap;
-    // justify-content: flex-start;
-    // row-gap: 10px;
-    // font-size: 12px;
-    // line-height: 1.17;
-
+  display: flex;
+  margin-left: auto;
+  justify-content: space-between;
+  gap: 40px;
+  font-size: 14px;
+  line-height: 1.17;
 }
 
 // @media screen and (max-width: 767px) {
@@ -22,68 +19,62 @@
 //     align-items: center;
 //     gap: 30px;
 
-
 // }
-
 
 // .contact-list .contact__item + .contact__item {
 //     margin-left: auto;
 //     @media screen and (min-width: 1200px) {
 //         margin-left: 30px;
 //     }
-    
+
 // }
 
 // .contact-list .contact-item + .contact-item {
 //     margin-left: 30px;
 // }
 
-.contact-list .contact-item + .contact-item {
-    margin-left: 50px;
-}
-
-.contact-item {
-    box-sizing: border-box;
-
-}
-
-.contact-tel__link {
-    margin-left: 30px;
-}
-
-// .contact__item {
-//     box-sizing: border-box;
-//     margin-left: 90px;
+// .contact-list .contact-item + .contact-item {
+//   margin-left: 50px;
 // }
 
+.contact__item {
+  display: flex;
+  align-items: center;
+}
+
 .contact-icon {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
-    margin-right: 10px;
-    fill: currentColor;
-    align-items: center;
-    &:hover,
-    &:focus {
-        color: var(--title-text-color);
-    }
+  position: relative;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-block;
+  margin-right: 10px;
+  fill: currentColor;
+  align-items: center;
+  vertical-align: middle;
 }
 
 .contact-mail__link,
 .contact-tel__link {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
-    align-items: center;
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    color: var(--primery-text-color);
-    padding-top: 32px;
-    padding-bottom: 32px;
-    &:hover,
-    &:focus {
-        color: var(--title-text-color);
-    }
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  align-items: center;
+  text-decoration: none;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1;
+  letter-spacing: 0.3px;
+  color: var(--primery-text-color);
+  padding-top: 32px;
+  padding-bottom: 32px;
+  &:hover,
+  &:focus {
+    color: var(--title-text-color);
+  }
+}
+
+.contact-mail__link:hover .contact-icon,
+.contact-mail__link:focus .contact-icon,
+.contact-tel__link:hover .contact-icon,
+.contact-tel__link:focus .contact-icon {
+  fill: var(--title-text-color);
 }
