--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,4 +1,3 @@
-
 // @media screen and (max-width: 767px) {
 //     .nav-list__item:not(:last-child) {
 //         margin-bottom: 32px;
@@ -17,21 +16,29 @@
 //     }
 // }
 
+.header-container {
+  display: flex;
+  width: 100%;
+  align-items: center;
+  padding: 0 215px 0 215px;
+  height: 80px;
+}
+
 .header-list {
-    display: block;
-    color: var(--accent-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
+  display: block;
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
 }
 
 .header__item {
-    margin-right: 50px;
+  margin-right: 50px;
 
-    &:last-child {
-        margin-right: 0;
-    }
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 // .main {
@@ -39,23 +46,22 @@
 // }
 
 .header {
-    height: 60px;
-    background-color: var(--white-color);
+  height: 60px;
+  background-color: var(--white-color);
 
-    @media screen and (min-width: 768px) {
-        border-bottom: 1px solid #ECECEC;
-        height: 80px;
-    }
+  @media screen and (min-width: 768px) {
+    border-bottom: 1px solid #ececec;
+    height: 80px;
+  }
 }
 
-.header>.container {
-    @media screen and (min-width: 768px) {
-        height: 80px;
-    }
+.header > .container {
+  @media screen and (min-width: 768px) {
+    height: 80px;
+  }
 
-    align-items: center;
-    display: flex;
-
+  align-items: center;
+  display: flex;
 }
 
 // .header>.container {
@@ -74,54 +80,52 @@
 // }
 
 .header-list {
-    display: flex;
-    position: relative;
-    padding: 0;
-    margin: 0;
-    list-style: none;
+  display: flex;
+  position: relative;
+  padding: 0;
+  margin: 0;
+  list-style: none;
 
-    @media (max-width: 767px) {
-        display: none;
-    }
+  @media (max-width: 767px) {
+    display: none;
+  }
 }
 
-
 .header-item {
-    margin-right: 30px;
+  margin-right: 30px;
 }
 
 .main-nav {
-    display: none;
-    align-items: center;
-
-    @media screen and (min-width: 768px) {
-        display: flex;
-    }
-    
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-    }
+  display: none;
 }
 
-.header-connect {
+@media screen and (min-width: 768px) {
+  .main-nav {
     display: flex;
-    // margin-left: auto;
-    align-items: center;
-    justify-content: center;
-    margin-left: 301px;
+  }
 }
 
+@media screen and (min-width: 1200px) {
+  .main-nav {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+}
 
-
+// .header-connect {
+//   display: flex;
+// margin-left: auto;
+//   align-items: center;
+//   justify-content: center;
+// }
 
 // @media screen and (min-width: 768px) {
 //     .header .container {
 //         height: 80px;
 //     }
 // }
-
 
 // .header-tab {
 //     display: flex;
