--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,64 +1,58 @@
 .main-nav {
-    display: flex;
-        align-items: center;
-
-    @media screen and (max-width: 767px) {
-        display: none;
-        
-    }
-
+  @media screen and (max-width: 767px) {
+    display: none;
+  }
 }
 
 .nav {
-    display: flex;
-    // display: none;
-    align-items: center;
+  //   display: flex;
+  // display: none;
+  align-items: center;
 
-    // @media screen and (min-width: 768px) {
-    //     display: flex;
-        
-    // }
+  // @media screen and (min-width: 768px) {
+  //     display: flex;
+
+  // }
 }
 
 .nav__studio,
 .nav__portfolio,
 .nav__contact {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: inline-block;
-    color: var(--accent-color);
-    font-weight: 500;
-    font-size: 14px;
-    line-height: 1.14;
-    letter-spacing: 0.02em;
-    padding-top: 32px;
-    padding-bottom: 32px;
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-block;
+  color: var(--accent-color);
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.02em;
+  padding-top: 32px;
+  padding-bottom: 32px;
 
-    &:hover,
-    &:focus {
-        color: var(--title-text-color);
-    }
+  &:hover,
+  &:focus {
+    color: var(--title-text-color);
+  }
 }
 
 .nav__portfolio,
 .nav__contact {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .current {
-    position: relative;
-    color: var(--title-text-color);
+  position: relative;
+  color: var(--title-text-color);
 }
 
 .current::after {
-    content: '';
-    position: absolute;
-    height: 4px;
-    background-color: var(--title-text-color);
-    bottom: -1px;
-    display: block;
-    width: 100%;
-    border-radius: 2px;
-    right: 0;
-
+  content: '';
+  position: absolute;
+  height: 4px;
+  background-color: var(--title-text-color);
+  bottom: 0;
+  display: block;
+  width: 100%;
+  border-radius: 2px;
+  right: 0;
 }
