--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 :root {
   --primery-text-color: #757575;
   --title-text-color: #2196F3;
@@ -761,6 +762,31 @@ span {
 }
 
 .header-container {
+  padding: 0 15px 0 15px;
+}
+
+@media screen and (max-width: 768px) {
+  .header-container {
+    padding: 0;
+  }
+}
+@media screen and (max-width: 767px) {
+  .nav-list__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (max-width: 479px) {
+  .nav-list__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+@media screen and (min-width: 768px) {
+  .nav-list__item:not(:last-child) {
+    margin-right: 50px;
+    padding: 0 215px 0 215px;
+  }
+}
+.header-container {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -768,7 +794,6 @@ span {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  padding: 0 215px 0 215px;
   height: 80px;
 }
 
@@ -871,6 +896,11 @@ span {
   color: var(--accent-color);
 }
 
+@media screen and (max-width: 768px) {
+  .logo-head {
+    margin-right: 0;
+  }
+}
 @media screen and (max-width: 767px) {
   .main-nav {
     display: none;
@@ -955,7 +985,7 @@ span {
   -webkit-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 9px;
   fill: currentColor;
   -webkit-box-align: center;
       -ms-flex-align: center;
@@ -996,6 +1026,20 @@ span {
   fill: var(--title-text-color);
 }
 
+@media screen and (max-width: 768px) {
+  .contact-list {
+    display: block;
+  }
+  .contact-mail__link,
+  .contact-tel__link {
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 114px;
+  }
+  .header-list {
+    margin-left: 93px;
+  }
+}
 .hero {
   background-image: linear-gradient var(--bg-gradi), url(../images/background/bg-mob1x-min.jpg);
   background-repeat: no-repeat;
@@ -1117,8 +1161,8 @@ span {
   margin-left: auto;
   margin-right: auto;
   background: #c4c4c4;
-  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../images/hero-background/background HW-04.jpg");
-  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero-background/background HW-04.jpg");
+  background-image: -webkit-gradient(linear, left top, right top, from(rgba(47, 48, 58, 0.4)), to(rgba(47, 48, 58, 0.4))), url("../../images/hero-background/bg_hero_desktop.jpg");
+  background-image: linear-gradient(to right, rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../../images/hero-background/bg_hero_desktop.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
@@ -1152,77 +1196,51 @@ span {
   }
 }
 
+.portfolio-content {
+  padding: 0 215px;
+}
+
 .cards-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
-  margin-right: -30px;
-}
-
-@media screen and (min-width: 768px) {
-  .cards-content {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .card-item {
-    width: calc((100% - 30px) / 2);
-  }
-}
-@media screen and (min-width: 1200px) {
-  .card-item {
-    width: calc((100% - 60px) / 3);
-  }
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  gap: 30px;
 }
 
 .card-item {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-preferred-size: calc(33.3333333333% - var(--typical-gap));
-      flex-basis: calc(33.3333333333% - var(--typical-gap));
-  margin-bottom: var(--typical-gap);
-  margin-right: var(--typical-gap);
-}
-.card-item:nth-child(3n) {
-  margin-right: 0;
+  -ms-flex-preferred-size: calc((100% - 60px) / 3);
+      flex-basis: calc((100% - 60px) / 3);
+  outline: 1px solid red;
 }
 .card-item:hover {
   -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
           box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
 }
-.card-item:nth-last-child(-n+3) {
-  margin-bottom: 0;
-}
 
 .item-content {
-  -webkit-box-flex: 1;
-      -ms-flex-positive: 1;
-          flex-grow: 1;
   padding: 20px 24px;
-  border-bottom: 1px solid #ECECEC;
-  border-left: 1px solid #ECECEC;
-  border-right: 1px solid #ECECEC;
+  border-bottom: 1px solid #ececec;
+  border-left: 1px solid #ececec;
+  border-right: 1px solid #ececec;
+  outline: 1px solid red;
 }
 
 .main-title {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
-  line-height: 2;
+  line-height: 36px;
   letter-spacing: 0.06em;
 }
 
 .main-work {
   font-size: 16px;
-  line-height: 1.88;
+  line-height: 30px;
   letter-spacing: 0.03em;
 }
 
@@ -1235,7 +1253,10 @@ span {
   position: absolute;
   top: 0;
   left: 0;
+  width: 370px;
+  padding: 63px 24px;
   height: 100%;
+  font-size: 18px;
   line-height: 1.56;
   letter-spacing: 0.03em;
   color: var(--white-color);
@@ -1246,30 +1267,6 @@ span {
   transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-@media screen and (max-width: 479px) {
-  .action-cover-text {
-    font-size: 14px;
-    padding: 24px 15px;
-  }
-}
-@media screen and (min-width: 480px) {
-  .action-cover-text {
-    font-size: 18px;
-    padding: 77px 24px;
-  }
-}
-@media screen and (min-width: 768px) {
-  .action-cover-text {
-    font-size: 18px;
-    padding: 49px 24px 77px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .action-cover-text {
-    font-size: 18px;
-    padding: 63px 24px;
-  }
 }
 
 .action-cover {
@@ -1492,29 +1489,25 @@ img {
   color: var(--white-color);
 }
 
-@media screen and (min-width: 768px) {
-  .team-members {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 30px;
-  }
+.team-members {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 30px;
 }
 @media screen and (min-width: 1200px) {
   .team-members {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 30px;
     padding: 0 180px;
   }
 }
 
 .team-list__item {
+  outline: 1px solid red;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
@@ -1534,7 +1527,7 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .team-list__item {
-    width: calc((100% - 90px) / 4);
+    width: calc((100% - 160px) / 4);
   }
 }
 
@@ -1681,27 +1674,10 @@ img {
       flex-wrap: wrap;
   gap: 30px;
 }
-@media screen and (min-width: 768px) {
-  .clients-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 30px;
-  }
-}
 @media screen and (min-width: 1200px) {
-  .clients-list {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    gap: 30px;
-  }
   .clients-list:last-child {
     margin-right: 0;
+    padding: 0 215px;
   }
 }
 
@@ -1720,7 +1696,7 @@ img {
           align-items: center;
   width: 100%;
   height: 92px;
-  border: 1px solid #AFB1B8;
+  border: 1px solid #afb1b8;
   border-radius: 4px;
   color: var(--svg-color);
 }
@@ -1753,7 +1729,7 @@ img {
 }
 
 .footer {
-  background-color: #2F303A;
+  background-color: #2f303a;
   padding-top: 60px;
   padding-bottom: 60px;
   margin: 0 auto;
@@ -1778,6 +1754,7 @@ img {
     -webkit-box-align: baseline;
         -ms-flex-align: baseline;
             align-items: baseline;
+    padding: 0 215px;
   }
 }
 
@@ -1953,7 +1930,7 @@ img {
   line-height: 1.1428571429;
   letter-spacing: 0.03em;
   text-transform: uppercase;
-  color: #FFFFFF;
+  color: #ffffff;
 }
 
 .input-form {
@@ -2028,7 +2005,7 @@ img {
       -ms-flex-align: center;
           align-items: center;
   font-weight: 700;
-  line-height: 1.88;
+  line-height: 50px;
   letter-spacing: 0.06em;
   color: var(--white-color);
   background-color: var(--title-text-color);
@@ -2062,6 +2039,7 @@ img {
 .icon-form {
   margin-left: 10px;
   fill: currentColor;
+  margin-top: -2px; /* Подстройка положения вручную */
 }
 
 .form-label {
