--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,75 +1,69 @@
 .clients {
-    padding-top: var(--next-typical-gap);
-    padding-bottom: var(--next-typical-gap);
+  padding-top: var(--next-typical-gap);
+  padding-bottom: var(--next-typical-gap);
 }
 
 .clients-title {
-    font-weight: 700;
-    font-size: 36px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    margin-bottom: 50px;
-    text-align: center;
-    color: var(--accent-color);
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  margin-bottom: 50px;
+  text-align: center;
+  color: var(--accent-color);
 }
 
 .clients-list {
-    display: flex;
-    margin: 0 auto;
-    flex-wrap: wrap;
-    gap: 30px;
+  display: flex;
+  margin: 0 auto;
+  flex-wrap: wrap;
+  gap: 30px;
 
-    @media screen and (min-width: 768px) {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
+  @media screen and (min-width: 768px) {
+  }
+  @media screen and (min-width: 1200px) {
+    &:last-child {
+      margin-right: 0;
+      padding: 0 215px;
     }
-    @media screen and (min-width: 1200px) {
-        display: flex;
-        flex-wrap: wrap;
-        gap: 30px;
-        &:last-child {
-            margin-right: 0;
-        }
-    }
+  }
 }
 
-
 .clients-list__link {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 92px;
-    border: 1px solid #AFB1B8;
-    border-radius: 4px;
-    color: var(--svg-color);
-    &:hover,
-    &:focus {
-        color: var(--title-text-color);
-        border-color: var(--title-text-color);
-    }
+  position: relative;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  color: var(--svg-color);
+  &:hover,
+  &:focus {
+    color: var(--title-text-color);
+    border-color: var(--title-text-color);
+  }
 }
 
 .clients-list__icon {
-    fill: currentColor;
+  fill: currentColor;
 }
 
 .clients-title {
-    color: var(--accent-color);
+  color: var(--accent-color);
 }
 
 .clients-list__item {
-    border-radius: 0px 0px 4px 4px;
-    width: calc((100% - 30px) / 2);
+  border-radius: 0px 0px 4px 4px;
+  width: calc((100% - 30px) / 2);
 
-    @media screen and (min-width: 768px) {
-        width: calc((100% - 60px) / 3);
-    }
+  @media screen and (min-width: 768px) {
+    width: calc((100% - 60px) / 3);
+  }
 
-    @media screen and (min-width: 1200px) {
-        width: calc((100% - 150px) / 6);
-    }
+  @media screen and (min-width: 1200px) {
+    width: calc((100% - 150px) / 6);
+  }
 }
