--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,26 +1,35 @@
-// @media screen and (max-width: 767px) {
-//     .nav-list__item:not(:last-child) {
-//         margin-bottom: 32px;
-//     }
-// }
+.header-container {
+  padding: 0 15px 0 15px;
+}
+@media screen and (max-width: 768px) {
+  .header-container {
+    padding: 0;
+  }
+}
 
-// @media screen and (max-width: 479px) {
-//     .nav-list__item:not(:last-child) {
-//         margin-bottom: 32px;
-//     }
-// }
+@media screen and (max-width: 767px) {
+  .nav-list__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
 
-// @media screen and (min-width: 768px) {
-//     .nav-list__item:not(:last-child) {
-//         margin-right: 50px;
-//     }
-// }
+@media screen and (max-width: 479px) {
+  .nav-list__item:not(:last-child) {
+    margin-bottom: 32px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .nav-list__item:not(:last-child) {
+    margin-right: 50px;
+    padding: 0 215px 0 215px;
+  }
+}
 
 .header-container {
   display: flex;
   width: 100%;
   align-items: center;
-  padding: 0 215px 0 215px;
   height: 80px;
 }
 
