--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -134,7 +134,7 @@
       rgba(47, 48, 58, 0.4),
       rgba(47, 48, 58, 0.4)
     ),
-    url('../images/hero-background/background\ HW-04.jpg');
+    url('../../images/hero-background/bg_hero_desktop.jpg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
