--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,317 +1,323 @@
-.backdrop.is-hidden {
-    opacity: 0;
-    pointer-events: none;
-    visibility: hidden;
-    transform: rotate(360deg) scale(0.1) translate(150px);
-    transition: 1000ms, visibility 0s 1s;
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.2);
+  overflow-y: scroll;
+  overflow: hidden;
+  transition: opacity 0.5s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.backdrop {
-    position: fixed;
-    transition: transform 1000ms, cubic-bezier(0.4, 0, 0.2, 1) visibility 1s 0s;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    padding: 40px;
-    overflow-y: scroll;
+.backdrop.is-hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: 500ms, visibility 0s 0.5s;
+}
+
+.modal-open {
+  overflow: hidden;
+  padding-right: calc(100vw - 100%);
 }
 
 .modal {
-    display: flex;
-    flex-direction: row-reverse;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 528px;
-    min-height: 581px;
-    background-color: var(--white-color);
-    border-radius: 4px;
-    overflow: auto;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  position: absolute;
+  top: 30%;
+  left: 50%;
+  transform: translate(-50%, -30%);
+  width: 450px;
+  min-height: 581px;
+  width: calc(100% - 30px);
+  background-color: var(--white-color);
+  border-radius: 4px;
+  padding: 40px;
+  overflow: auto;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  animation: scaleIn 0.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
 
-    @media screen and (max-width: 479px) {
-        width: calc(100% - 30px);
-    }
+  @media screen and (min-width: 480px) and (max-width: 1199px) {
+    width: 450px;
+  }
 
-    @media screen and (min-width: 480px) and (max-width: 1199px) {
-        width: 450px;
-    }
-
-    @media screen and (min-width: 1200px) {
-        width: 528px;
-    }
+  @media screen and (min-width: 1200px) {
+    width: 528px;
+  }
 }
 
 .modal-close-btn {
-    position: absolute;
-    right: 8px;
-    top: 8px;
-    width: 30px;
-    height: 30px;
-    border: 1px solid rgba(0, 0, 0, 0.1);
-    border-radius: 50%;
-    background-color: var(--white-color);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    cursor: pointer;
-    padding: 0;
-    &:hover {
-        fill: var(--title-text-color);
-    }
+  position: absolute;
+  right: 8px;
+  top: 8px;
+  width: 30px;
+  height: 30px;
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  background-color: var(--white-color);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  cursor: pointer;
+  padding: 0;
+  &:hover {
+    fill: var(--title-text-color);
+  }
 }
 
 .modal-title {
-    font-weight: 700;
-    font-size: 20px;
-    line-height: calc(23 / 22);
-    text-align: center;
-    letter-spacing: 0.03em;
-    text-align: center;
-    text-transform: uppercase;
-    color: #212121;
-    margin-bottom: 30px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: calc(23 / 22);
+  text-align: center;
+  letter-spacing: 0.03em;
+  text-align: center;
+  text-transform: uppercase;
+  color: #212121;
+  margin-bottom: 30px;
 }
 
-.modal-form {
-    padding: 40px;
-}
+// .modal-form {
+//   padding: 40px;
+// }
 
 .modal-form-title {
-    margin-bottom: 12px;
-    font-weight: 700;
-    font-size: 20px;
-    line-height: calc(23 / 20);
-    text-align: center;
-    letter-spacing: 0.03em;
-    color: var(--accent-color);
-    width: 370px;
-    height: 60px;
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: calc(23 / 20);
+  text-align: center;
+  letter-spacing: 0.03em;
+  color: var(--accent-color);
+  width: 370px;
+  height: 60px;
 
-    @media screen and (max-width: 479px) {
-        text-align: left;
-    }
+  @media screen and (max-width: 479px) {
+    text-align: left;
+  }
 
-    @media screen and (min-width: 1199px) {
-        width: 448px;
-        height: 23px;
-    }
+  @media screen and (min-width: 1199px) {
+    width: 448px;
+    height: 23px;
+  }
 
-    @media screen and (min-width: 1200px) {
-        line-height: 1.15;
-    }
+  @media screen and (min-width: 1200px) {
+    line-height: 1.15;
+  }
 }
 
 .form-field {
-    // position: relative;
-    margin-bottom: 10px;
+  margin-bottom: 10px;
 }
 
 .label-title {
-    display: block;
-    margin-bottom: 4px;
+  display: block;
+  margin-bottom: 4px;
 
-    font-weight: 400;
-    font-size: 12px;
-    line-height: calc(14 / 12);
-    letter-spacing: 0.01em;
-    color: var(--primery-text-color);
+  font-weight: 400;
+  font-size: 12px;
+  line-height: calc(14 / 12);
+  letter-spacing: 0.01em;
+  color: var(--primery-text-color);
 }
 
 .label-input {
-    height: 40px;
-    width: 370px;
-    padding-top: 12px;
-    padding-bottom: 12px;
-    padding-left: 42px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    &:hover,
-    &:focus {
-        border-color: var(--title-text-color);
-    }
+  outline: none;
+  height: 40px;
+  width: 370px;
+  padding-top: 12px;
+  padding-bottom: 12px;
+  padding-left: 42px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    border-color: var(--title-text-color);
+  }
 
-    @media screen and (min-width: 1200px) {
-        width: 448px;
-        hight: 40px;        
-    }
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+    height: 40px;
+  }
 }
 
-.label-input:hover+.form-icon,
-.label-input:focus+.form-icon {
-    fill: var(--title-text-color);
+.label-input:hover + .form-icon,
+.label-input:focus + .form-icon {
+  fill: var(--title-text-color);
 }
 
 .form-icon {
-    position: absolute;
-    left: 12px;
-    top: 50%;
-    transform: translateY(-50%);
-    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field.textarea {
-    margin-bottom: 20px;
+  margin-bottom: 20px;
 }
 
 .label-textarea {
-    width: 100%;
-    height: 120px;
-    padding: 12px 16px;
-    border: 1px solid rgba(33, 33, 33, 0.2);
-    border-radius: 4px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    resize: none;
-    &:focus-within {
-        border-color: var(--title-text-color);
-    }
-    &:hover,
-    &:focus {
-        border-color: var(--title-text-color);
-    }
+  outline: none;
+
+  width: 100%;
+  height: 120px;
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  resize: none;
+  &:focus-within {
+    border-color: var(--title-text-color);
+  }
+  &:hover,
+  &:focus {
+    border-color: var(--title-text-color);
+  }
 }
 
 .label-textarea::placeholder {
-    font-weight: 400;
-    font-size: 14px;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.01em;
-    color: rgba(117, 117, 117, 0.5);
+  font-weight: 400;
+  font-size: 14px;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.01em;
+  color: rgba(117, 117, 117, 0.5);
 }
 
 .form-field.checkbox-field {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 
 .checkbox-input {
-    display: block;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: block;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-input {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    margin: -1px;
-    border: 0;
-    padding: 0;
-    white-space: nowrap;
-    clip-path: inset(100%);
-    clip: rect(0 0 0 0);
-    overflow: hidden;
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
 }
 
 .link-policy {
-    color: var(--title-text-color);
-    text-decoration-line: underline;
+  color: var(--title-text-color);
+  text-decoration-line: underline;
 }
 
 .privacy-text {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 
-    font-size: 12px;
-    line-height: 1.16;
-    letter-spacing: 0.03em;
-    color: var(--primery-text-color);
-    background-color: var(--white-color);
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.03em;
+  color: var(--primery-text-color);
+  background-color: var(--white-color);
 
-    @media screen and (max-width: 1199px) {
-        width: max-content;
-    }
+  @media screen and (max-width: 1199px) {
+    width: max-content;
+  }
 
-    @media screen and (min-width: 1200px) {
-        font-size: 14px;
-        line-height: 1.7142857143;
-    }
+  @media screen and (min-width: 1200px) {
+    font-size: 14px;
+    line-height: 1.7142857143;
+  }
 }
 
 span {
-    color: #000000;
+  color: #000000;
 }
 
-.checkbox-input:checked+.privacy-text span {
-    background-color: var(--title-text-color);
-    border: none;
+.checkbox-input:checked + .privacy-text span {
+  background-color: var(--title-text-color);
+  border: none;
 }
 
-.checkbox-input:checked+.privacy-text .checkbox-icon {
-    fill: var(--white-color);
+.checkbox-input:checked + .privacy-text .checkbox-icon {
+  fill: var(--white-color);
 }
 
-.checkbox-input:hover+.privacy-text span,
-.checkbox-input:focus+.privacy-text span {
-    border-color: var(--title-text-color);
+.checkbox-input:hover + .privacy-text span,
+.checkbox-input:focus + .privacy-text span {
+  border-color: var(--title-text-color);
 }
 
 .icon-check {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    align-self: center;
-    margin-right: 8px;
-    width: 16px;
-    height: 15px;
-    border: 2px solid var(--accent-color);
-    border-radius: 3px;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  align-self: center;
+  margin-right: 8px;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--accent-color);
+  border-radius: 3px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-icon {
-    fill: transparent;
+  fill: transparent;
 }
 
 @media screen and (max-width: 479px) {
-    .checkbox-field {
-        display: flex;
-    }
+  .checkbox-field {
+    display: flex;
+  }
 }
 
 .modal-form-button {
-    display: flex;
-    width: 200px;
-    height: 50px;
-    margin: 0 auto;
-    padding: 0;
-    justify-content: center;
-    align-items: center;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.88;
-    letter-spacing: 0.06em;
-    background: var(--title-text-color);
-    border: none;
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
-    color: #FFFFFF;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    cursor: pointer;
-    &:hover,
-    &:focus {
-        background: #188CE8;
-    }
+  display: flex;
+  width: 200px;
+  height: 50px;
+  margin: 0 auto;
+  padding: 0;
+  justify-content: center;
+  align-items: center;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  background: var(--title-text-color);
+  border: none;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  border-radius: 4px;
+  color: #ffffff;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
+  &:hover,
+  &:focus {
+    background: #188ce8;
+  }
 }
 
 .modal-form-icon {
-    position: relative;
-    display: block;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-        fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  position: relative;
+  display: block;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-field:focus-within .form-icon {
-    fill: var(--title-text-color);
+  fill: var(--title-text-color);
 }
 
 .form-field:focus-within .label-input {
-    border-color: var(--title-text-color);
+  border-color: var(--title-text-color);
 }
 
 .button {
-    cursor: pointer;
+  cursor: pointer;
 }
