--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,16 +1,24 @@
 .clients {
-  padding-top: var(--next-typical-gap);
-  padding-bottom: var(--next-typical-gap);
+  padding: 60px 0 60px 0;
+
+  @media screen and (min-width: 1200px) {
+    padding: 94px 0 94px 0;
+  }
 }
 
 .clients-title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.16;
+  font-size: 28px;
+  line-height: 33px;
   letter-spacing: 0.03em;
   margin-bottom: 50px;
   text-align: center;
   color: var(--accent-color);
+
+  @media screen and (min-width: 1200px) {
+    font-size: 36px;
+    line-height: 42px;
+  }
 }
 
 .clients-list {
@@ -18,41 +26,25 @@
   margin: 0 auto;
   flex-wrap: wrap;
   gap: 30px;
-
-  @media screen and (min-width: 768px) {
-  }
-  @media screen and (min-width: 1200px) {
-    &:last-child {
-      margin-right: 0;
-      padding: 0 215px;
-    }
-  }
 }
 
 .clients-list__link {
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   justify-content: center;
   align-items: center;
   width: 100%;
   height: 92px;
+  fill: var(--svg-color);
   border: 1px solid #afb1b8;
   border-radius: 4px;
-  color: var(--svg-color);
+  transition: border-color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    fill 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+
   &:hover,
   &:focus {
-    color: var(--title-text-color);
+    fill: var(--title-text-color);
     border-color: var(--title-text-color);
   }
-}
-
-.clients-list__icon {
-  fill: currentColor;
-}
-
-.clients-title {
-  color: var(--accent-color);
 }
 
 .clients-list__item {
