--- a/sass/layout/_email-tel.scss
+++ b/sass/layout/_email-tel.scss
@@ -7,36 +7,6 @@
   line-height: 1.17;
 }
 
-// @media screen and (max-width: 767px) {
-//     display: none;
-//     margin-bottom: 64px;
-// }
-
-// @media screen and (mix-width: 1200px) {
-//     margin-left: auto;
-//     display: flex;
-//     justify-content: center;
-//     align-items: center;
-//     gap: 30px;
-
-// }
-
-// .contact-list .contact__item + .contact__item {
-//     margin-left: auto;
-//     @media screen and (min-width: 1200px) {
-//         margin-left: 30px;
-//     }
-
-// }
-
-// .contact-list .contact-item + .contact-item {
-//     margin-left: 30px;
-// }
-
-// .contact-list .contact-item + .contact-item {
-//   margin-left: 50px;
-// }
-
 .contact__item {
   display: flex;
   align-items: center;
@@ -46,7 +16,7 @@
   position: relative;
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-block;
-  margin-right: 9px;
+  margin-right: 10px;
   fill: currentColor;
   align-items: center;
   vertical-align: middle;
@@ -79,19 +49,31 @@
   fill: var(--title-text-color);
 }
 
-@media screen and (max-width: 768px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
   .contact-list {
-    display: block;
+    gap: 0;
+    flex-direction: column;
+    margin-left: 114px;
   }
 
+  .contact-tel__link {
+    margin-left: -2px;
+    margin-bottom: -12px;
+  }
   .contact-mail__link,
   .contact-tel__link {
-    padding-top: 10px;
+    padding-top: 0;
     padding-bottom: 10px;
-    margin-left: 114px;
+    font-size: 12px;
   }
 
   .header-list {
     margin-left: 93px;
+  }
+
+  .contact-icon {
+    width: 13px;
+    height: 14px;
+    margin-right: 7px;
   }
 }
