--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -15,7 +15,6 @@
   @media screen and (min-width: 1200px) {
     display: flex;
     align-items: baseline;
-    padding: 0 215px;
   }
 }
 
@@ -27,7 +26,7 @@
   line-height: 1.19;
   letter-spacing: 0.03em;
   text-decoration: none;
-  margin-bottom: 20px;
+  margin-bottom: 28px;
   display: block;
 
   // @media screen and (max-width: 767px) {
@@ -54,7 +53,7 @@
 
 .footer-nav {
   @media screen and (max-width: 1199px) {
-    margin-bottom: 60px;
+    margin-bottom: 30px;
     display: flex;
     align-items: center;
     flex-direction: column;
@@ -62,6 +61,7 @@
 
   @media screen and (max-width: 767px) {
     width: 100%;
+    margin-bottom: 30px;
   }
 
   @media screen and (min-width: 1200px) {
@@ -72,9 +72,14 @@
 .footer-address,
 .footer-contacts {
   font-style: normal;
+  font-weight: 400;
   font-size: 14px;
-  line-height: 1.71;
+  line-height: 16.41px;
   letter-spacing: 0.03em;
+}
+
+.footer-address {
+  color: var(--white-color);
 }
 
 .foot-details {
@@ -98,6 +103,10 @@
   text-transform: uppercase;
   color: var(--white-color);
   margin-bottom: 20px;
+
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-top: 7px;
+  }
 }
 
 // .footer-links {
@@ -190,7 +199,7 @@
 }
 
 .input-form {
-  width: 358px;
+  width: 100%;
   height: 50px;
   padding-left: 16px;
   margin-right: 12px;
@@ -198,6 +207,15 @@
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 4px;
   background-color: transparent;
+
+  @media screen and (max-width: 768px) {
+    margin-right: 0;
+  }
+
+  @media screen and (min-width: 1200px) {
+    width: 358px;
+    margin-right: 10px;
+  }
 }
 
 .input-form:placeholder-shown {
@@ -222,7 +240,6 @@
 
 .form-btn {
   display: flex;
-  padding: 0;
   width: 200px;
   height: 50px;
   justify-content: center;
@@ -236,6 +253,7 @@
   border-radius: 4px;
   cursor: pointer;
   border: none;
+  padding: 1px 0 0 0;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   &:hover,
@@ -250,14 +268,14 @@
   }
 
   @media screen and (min-width: 1200px) {
-    margin-left: auto;
+    // margin-left: auto;
   }
 }
 
 .icon-form {
   margin-left: 10px;
   fill: currentColor;
-  margin-top: -2px; /* Подстройка положения вручную */
+  margin-top: -1px;
 }
 
 .form-label {
