--- a/sass/layout/_logo.scss
+++ b/sass/layout/_logo.scss
@@ -1,24 +1,18 @@
-// .logo {
-//   width: 134px;
-//   height: 28px;
-// }
-
 .logo-head {
   font-family: var(--second-font);
   font-weight: 700;
-  font-size: 26px;
+  font-size: 24px;
   line-height: 1.2;
   letter-spacing: 0.03em;
   color: var(--title-text-color);
-  margin-right: 93px;
+  margin-right: 0;
+
+  @media screen and (min-width: 1200px) {
+    font-size: 26px;
+    margin-right: 93px;
+  }
 }
 
 .accent1 {
   color: var(--accent-color);
-}
-
-@media screen and (max-width: 768px) {
-  .logo-head {
-    margin-right: 0;
-  }
 }
