--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -50,7 +50,7 @@
   position: absolute;
   height: 4px;
   background-color: var(--title-text-color);
-  bottom: 0;
+  bottom: -1px;
   display: block;
   width: 100%;
   border-radius: 2px;
