--- a/sass/layout/_section-features.scss
+++ b/sass/layout/_section-features.scss
@@ -1,10 +1,9 @@
 .section-features {
-  // Mobile screen first
-
+  // border: 1px solid tomato;
   padding-top: 60px;
-  padding-bottom: 60px;
-  align-items: center;
-  margin: 0 auto;
+  padding-bottom: 30px;
+  // align-items: center;
+  // margin: 0 auto;
 
   @media screen and (min-width: 1200px) {
     padding-top: var(--next-typical-gap);
@@ -13,25 +12,15 @@
 }
 
 .features {
-  display: block;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
   @media screen and (min-width: 768px) {
-    display: flex;
-    flex-wrap: wrap;
-
-    :nth-child(2n) {
-      margin-right: 0;
-    }
   }
 
   @media screen and (min-width: 1200px) {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-
-    :nth-child(2n) {
-      margin-right: 30px;
-    }
+    // justify-content: center;
   }
 }
 
@@ -40,7 +29,15 @@
 }
 
 .feature__item {
-  margin-right: var(--typical-gap);
+  @media screen and (min-width: 768px) {
+    :nth-child(2n) {
+      margin-right: 0;
+    }
+  }
+
+  @media screen and (min-width: 1200px) {
+    margin-right: var(--typical-gap);
+  }
 }
 
 .feature__item:nth-child(4n) {
@@ -49,16 +46,29 @@
 
 .feature__item:nth-last-child(-n + 4) {
   margin-bottom: 0;
+  @media screen and (min-width: 768px) and (max-width: 1199px) {
+    margin-right: 30px;
+
+    &:nth-child(2n) {
+      margin-right: 0;
+    }
+  }
+
+  // @media screen and (max-width: 768px) {
+  //   &:nth-child(4n) {
+  //     margin-right: 0;
+  //   }
+  // }
 }
 
 .thumb {
-  align-items: center;
   display: flex;
-  margin-bottom: 30px;
+  align-items: center;
   justify-content: center;
+  margin-bottom: 30px;
   background-color: #f5f4fa;
   border-radius: 4px;
-  width: 450px;
+  max-width: 450px;
   height: 120px;
 
   @media screen and (min-width: 768px) {
@@ -81,27 +91,15 @@
   text-transform: uppercase;
   margin-bottom: 10px;
   color: var(--accent-color);
-  left: 105px;
-  top: 670px;
 
   @media screen and (min-width: 768px) {
     display: block;
-    left: 15px;
-    top: 690px;
-  }
-
-  @media screen and (min-width: 1200px) {
-    display: block;
-    left: 215px;
-    top: 924px;
   }
 }
 
 .feature__text {
   max-width: 450px;
-  height: 50px;
-  left: 15px;
-  top: 696px;
+  height: auto;
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -109,19 +107,10 @@
 
   @media screen and (min-width: 768px) {
     max-width: 354px;
-    height: 48px;
-    left: 15px;
-    top: 716px;
-    // &:nth-child(3n) {
-    //     margin-bottom: 0;
-    // }
   }
 
   @media screen and (min-width: 1200px) {
     max-width: 270px;
-    height: 72px;
-    left: 215px;
-    top: 950px;
     margin-bottom: 0;
   }
 }
