--- a/sass/layout/_section-team.scss
+++ b/sass/layout/_section-team.scss
@@ -8,12 +8,12 @@
   }
 
   @media screen and (min-width: 1200px) {
-    padding: 0 180px;
+    // padding: 0 180px;
   }
 }
 
 .team-list__item {
-  outline: 1px solid red;
+  // outline: 1px solid red;
   flex-direction: column;
   align-items: center;
   background: var(--white-color);
@@ -29,13 +29,13 @@
     width: calc((100% - 30px) / 2);
   }
   @media screen and (min-width: 1200px) {
-    width: calc((100% - 160px) / 4);
+    flex-basis: calc((100% - 22.5px * 4) / 4);
   }
 }
 
 @media screen and (max-width: 767px) {
   .team-list__item:not(:last-child) {
-    margin-bottom: 30px;
+    // margin-bottom: 30px;
   }
 }
 
@@ -123,23 +123,19 @@
 }
 
 .soc-link {
-  position: relative;
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: flex;
   align-items: center;
   justify-content: center;
+  transition: background-color 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    fill 0.5s cubic-bezier(0.4, 0, 0.2, 1);
   width: 44px;
   height: 44px;
   border-radius: 50%;
   background-color: var(--white-color);
-  color: var(--svg-color);
+  fill: var(--svg-color);
   &:hover,
   &:focus {
     background-color: var(--title-text-color);
-    color: var(--white-color);
+    fill: var(--white-color);
   }
-}
-
-.soc__icon {
-  fill: currentColor;
 }
