--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -1,18 +1,15 @@
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap');
+
 :root {
-    --primery-text-color: #757575;
-    --title-text-color: #2196F3;
-    --accent-color: #212121;
-    --white-color: #ffffff;
-    --typical-gap: 30px;
-    --next-typical-gap: 94px;
-    --fill-color: #F5F4FA;
-    --svg-color: #AFB1B8;
-    --main-font: 'Roboto', sans-serif;
-    --second-font: 'Raleway', sans-serif;
-    --bg-gradi: rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
+  --primery-text-color: #757575;
+  --title-text-color: #2196f3;
+  --accent-color: #212121;
+  --white-color: #ffffff;
+  --typical-gap: 30px;
+  --next-typical-gap: 94px;
+  --fill-color: #f5f4fa;
+  --svg-color: #afb1b8;
+  --main-font: 'Roboto', sans-serif;
+  --second-font: 'Raleway', sans-serif;
+  --bg-gradi: rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
 }
-
-
-
-
-
