--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -1,139 +1,61 @@
-.buttons-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px 8px;
-    margin-bottom: 40px;
-
-    @media screen and (min-width: 768px) {
-        justify-content: center;
-        margin-bottom: 30px;
-    }
-
-    @media screen and (min-width: 1200px) {
-        margin-bottom: 50px;
-    }
-}
-
-.button-all {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    min-width: 73px;
-    height: 38px;
-    cursor: pointer;
-    background-color: var(--fill-color);
-    border-radius: 4px;
-    border: 1px solid transparent;
-    &:hover,
-    &:focus {
-        background-color: var(--title-text-color);
-    }
-}
-
-.all-web {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    min-width: 128px;
-    height: 38px;
-    cursor: pointer;
-    background-color: var(--fill-color);
-    border-radius: 4px;
-    margin-left: 8px;
-    border: 1px solid transparent;
-    &:hover,
-    &:focus {
-        background-color: var(--title-text-color);
-    }
-}
-
-.apps {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    min-width: 145px;
-    height: 38px;
-    cursor: pointer;
-    background-color: var(--fill-color);
-    border-radius: 4px;
-    margin-left: 8px;
-    border: 1px solid transparent;
-    &:hover,
-    &:focus {
-        background-color: var(--title-text-color);
-    }
-}
-
-.design {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    min-width: 103px;
-    height: 38px;
-    cursor: pointer;
-    background-color: var(--fill-color);
-    border-radius: 4px;
-    margin-left: 8px;
-    border: 1px solid transparent;
-    &:hover,
-    &:focus {
-        background-color: var(--title-text-color);
-    }
-}
-
-.marketing {
-    position: relative;
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    font-weight: 500;
-    font-size: 16px;
-    line-height: 1.62;
-    letter-spacing: 0.03em;
-    min-width: 130px;
-    height: 38px;
-    cursor: pointer;
-    background-color: var(--fill-color);
-    border-radius: 4px;
-    margin-left: 8px;
-    border: 1px solid transparent;
-    &:hover,
-    &:focus {
-        background-color: var(--title-text-color);
-    }
-}
-
-.button:hover,
-.button:focus {
-    color: var(--white-color);
-    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
-        0px 1px 2px rgba(0, 0, 0, 0.08),
-        0px 2px 2px rgba(0, 0, 0, 0.12);
-}
-
 .button-list {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 15px 8px;
-    margin-bottom: 40px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 8px;
+  margin-bottom: 40px;
+  width: 320px;
 
-    @media screen and (min-width: 768px) {
-        justify-content: center;
-        margin-bottom: 30px;
-        display: flex;
-    }
+  @media screen and (min-width: 768px) {
+    margin-bottom: 30px;
+    flex-wrap: nowrap;
+    justify-content: center;
+    width: 100%;
+  }
 
-    @media screen and (min-width: 1200px) {
-        margin-bottom: 50px;
-    }
+  @media screen and (min-width: 1200px) {
+    margin-bottom: 50px;
+  }
+}
+
+.button-item {
+  padding: 6px 22px;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  letter-spacing: 0.03em;
+  cursor: pointer;
+  background-color: var(--fill-color);
+  border: none;
+  border-radius: 4px;
+  height: 38px;
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  &:hover,
+  &:focus {
+    color: var(--white-color);
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+    background-color: var(--title-text-color);
+  }
+}
+
+.all-btn {
+  width: 64px;
+}
+
+.web-btn {
+  width: 120px;
+}
+
+.apps-btn {
+  width: 83px;
+}
+
+.design-btn {
+  width: 96px;
+}
+
+.marketing-btn {
+  width: 121px;
 }
