--- a/sass/layout/_portfolio-main-content.scss
+++ b/sass/layout/_portfolio-main-content.scss
@@ -1,9 +1,9 @@
-.main-content {
-    padding-top: 60px;
-    padding-bottom: 60px;
+.portfolio-main {
+  padding-top: 60px;
+  padding-bottom: 60px;
 
-    @media screen and (min-width: 1200px) {
-        padding-top: var(--next-typical-gap);
-        padding-bottom: var(--next-typical-gap);
-    }
+  @media screen and (min-width: 1200px) {
+    padding-top: var(--next-typical-gap);
+    padding-bottom: var(--next-typical-gap);
+  }
 }
