--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -24,15 +24,16 @@
 
 .modal {
   position: absolute;
-  top: 40%;
+  top: 50%;
   left: 50%;
-  transform: translate(-50%, -30%);
+  transform: translate(-50%, -50%);
   width: calc(100% - 30px);
-  min-height: 581px;
+  // width: 450px;
+  max-height: 90vh;
   background-color: var(--white-color);
   border-radius: 4px;
   padding: 40px;
-  overflow: auto;
+  overflow-y: auto;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   animation: scaleIn 0.5s cubic-bezier(0.4, 0, 0.2, 1) forwards;
@@ -65,6 +66,11 @@
   }
 }
 
+.modal-form {
+  display: flex;
+  flex-direction: column;
+}
+
 .modal-title {
   font-weight: 700;
   font-size: 20px;
@@ -85,12 +91,9 @@
   text-align: center;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  width: 370px;
+  width: 100%;
+  max-width: 370px;
   height: 60px;
-
-  @media screen and (max-width: 479px) {
-    text-align: left;
-  }
 
   @media screen and (min-width: 1199px) {
     width: 448px;
@@ -119,7 +122,8 @@
 .label-input {
   outline: none;
   height: 40px;
-  width: 370px;
+  width: 100%;
+  max-width: 370px;
   padding-top: 12px;
   padding-bottom: 12px;
   padding-left: 42px;
